<resources>
    <string name="app_name">PUTour</string>
    <!-- Strings related to login -->
    <string name="logo">Logo</string>
    <string name="prompt_account">帳號</string>
    <string name="prompt_password">密碼</string>
    <string name="action_sign_in">登入</string>
    <string name="action_clear">清除</string>
    <string name="login_failed">帳密有錯，請重新輸入</string>
    <string name="input_empty">請輸入此欄位</string>

    <string name="title_taichung_ibike">台中市 iBike 站點</string>
    <string name="title_pu_ibike">靜宜附近 iBike 站點</string>
    <string name="title_pu_flower">靜宜附近賞花景點</string>
    <string name="title_check_in">拍照打卡</string>
    <string name="title_logout">登出系統</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>